--- a/src/pages/dance.scss
+++ b/src/pages/dance.scss
@@ -119,6 +119,7 @@
   }
   .button  {
     border: 1px solid #fff;
+    border-radius: 4px;
     padding: 1rem;
     transition: all 0.23s ease-out;
 
